<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".Profile">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="137dp"
        android:layout_height="38dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Profile"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
            android:id="@+id/text1"
            android:layout_width="124dp"
            android:layout_height="50dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="255dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/d_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="134dp"
            android:layout_height="40dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="360dp"
            android:layout_marginEnd="267dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/nic"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="302dp"
            android:layout_height="42dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="228dp"
            android:layout_marginEnd="234dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="488dp"
            android:layout_marginEnd="299dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/address"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/AIdonorname"
            android:layout_width="329dp"
            android:layout_height="54dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/input_field"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/AIaddress"
        android:layout_width="337dp"
        android:layout_height="56dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/input_field"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AInic"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
            android:id="@+id/AInic"
            android:layout_width="334dp"
            android:layout_height="52dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/input_field"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AIcontact"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/AIcontact"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/input_field"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AIdonorname"
            tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/mSignUpBtn"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/toolbar"
        android:fontFamily="sans-serif-black"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/toolbar"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mSignUpBtn2"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/toolbar"
        android:fontFamily="sans-serif-black"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/toolbar"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>