<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".UpdateReservation">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="217dp"
        android:layout_height="39dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/update_reservation"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="255dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="267dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/to"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="147dp"
        android:layout_height="38dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="234dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/from"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="247dp"
        android:layout_height="23dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="299dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/train_schedule"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="156dp"
        android:layout_height="30dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="299dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/seat_count"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Cdate"
        android:layout_width="329dp"
        android:layout_height="54dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/input_field"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Cfrom"
        android:layout_width="329dp"
        android:layout_height="54dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/input_field"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:enabled="false"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Cto"
        android:layout_width="329dp"
        android:layout_height="54dp"
        android:layout_marginTop="252dp"
        android:background="@drawable/input_field"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Cschedule"
        android:layout_width="329dp"
        android:layout_height="54dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/input_field"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Ccount"
        android:layout_width="329dp"
        android:layout_height="54dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/input_field"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/BtnUpdate"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/toolbar"
        android:fontFamily="sans-serif-black"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/toolbar"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BtnDelete"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/delete_btn"
        android:fontFamily="sans-serif-black"
        android:text="Delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/delete_btn"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>